--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -46,7 +46,7 @@
             <h5 class="mt-2 mb-2">{{ hedline.title }}</h5>
             <p>{{ hedline.description }}</p>
             <a class="btn btn-success btn-sm mt-2" href="{{ hedline.url }}"
-              >Readmoreooo</a
+              >Read more</a
             >
           </div>
         </div>
